--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
+    "esbuild-loader": "^2.13.1",
     "path-browserify": "^1.0.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
